--- a/Formulario.html
+++ b/Formulario.html
@@ -13,8 +13,9 @@
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/bootstrap-notify.min.js" type="text/javascript"></script>
     <script src="js/script.js" type="text/javascript"></script>
+    <script src="js/validator.js" type="text/javascript"></script>
     <script type="text/javascript">
-      $(document).ready(function () {
+        $(document).ready(function () {
         $("#CPF").mask("000.000.000-00", { reverse: true });
         $("#dataNascimento").mask("00/00/0000");
         $("#formCadastro").validate({
@@ -31,9 +32,6 @@
 						dataNascimento: {
 							required: true,
 						},
-						genero: {
-							required: true,
-						},
             senha: {
 							required: true,
 						},
@@ -43,7 +41,8 @@
 						},
 					},
 					submitHandler: function(form){
-						alert("Cadastro Enviado")						
+						alert("Cadastro Enviado")
+            form.reset()						
 					}
 				})
 			})
@@ -104,7 +103,7 @@
           <label>Gênero*</label></br>
           <input type="radio" name="genero" value="M" /> Masculino<br>
           <input type="radio" name="genero" value="F" /> Feminino<br>
-          <input type="radio" name="genero" value="N" /> Não Declarado<br>
+          <input type="radio" name="genero" value="N" checked /> Não Declarado<br>
         </div>
         <div class="form-group">
           <label>Senha*</label>
