--- a/Formulario.html
+++ b/Formulario.html
@@ -15,6 +15,36 @@
     <script src="js/script.js" type="text/javascript"></script>
     <script src="js/validator.js" type="text/javascript"></script>
     <script type="text/javascript">
+  function _cpf(cpf) {
+    cpf = cpf.replace(/[^\d]+/g, "");
+    if (cpf == "") return false;
+    if (
+      cpf.length != 11 ||
+      cpf == "00000000000" ||
+      cpf == "11111111111" ||
+      cpf == "22222222222" ||
+      cpf == "33333333333" ||
+      cpf == "44444444444" ||
+      cpf == "55555555555" ||
+      cpf == "66666666666" ||
+      cpf == "77777777777" ||
+      cpf == "88888888888" ||
+      cpf == "99999999999"
+    )
+      return false;
+    add = 0;
+    for (i = 0; i < 9; i++) add += parseInt(cpf.charAt(i)) * (10 - i);
+    rev = 11 - (add % 11);
+    if (rev == 10 || rev == 11) rev = 0;
+    if (rev != parseInt(cpf.charAt(9))) return false;
+    add = 0;
+    for (i = 0; i < 10; i++) add += parseInt(cpf.charAt(i)) * (11 - i);
+    rev = 11 - (add % 11);
+    if (rev == 10 || rev == 11) rev = 0;
+    if (rev != parseInt(cpf.charAt(10))) return false;
+    return true;
+  }</script>
+    <script type="text/javascript">
         $(document).ready(function () {
         $("#CPF").mask("000.000.000-00", { reverse: true });
         $("#dataNascimento").mask("00/00/0000");
@@ -70,12 +100,24 @@
         </div>
         <div class="form-group">
           <label>CPF*</label>
+          <script>
+            function validarCPF(el){
+  if( !_cpf(el.value) ){
+
+    alert("Digite um CPF válido!");
+
+    // apaga o valor
+    el.value = "";
+  }
+}
+          </script>
           <input
             type="text"
             name="CPF"
             id="CPF"
             placeholder="Digite seu CPF"
             class="form-control"
+            onblur="validarCPF(this)"
           />
         </div>
         <div class="form-group">
